Update QuizService.java